/* Et seisoon van 2017: Veerde werldtitel */

--- a/Lewis_Hamilton.mw
+++ b/Lewis_Hamilton.mw
@@ -177,7 +177,7 @@ In Oustenryk, kwalificereden Hamilton sich dardes achter Vettel, terwyl Bottas d
 [[Bestaand:2017_British_Grand_Prix_(35895436386).jpg|rechts|duum|Hamilton behåleden synen vyvden  Grand Slam van syne karriere en synen darden van et seisoon in den britsken Grand Prix.]]
 By den britsken Grand Prix, kwalificereden Hamilton sich vöär de eyrste startpositsy, med nen tyd den meyr as ne halve sekunde rapper was as den tweydseplåtseden Räikkönen. De race wyr ewönnen döär Hamilton, den gelykkwam med et rekord med synen darden grand slam van et seisoon, startend van de eyrste startpositsy, terwyl hy alle ründen van de race had eleided, de rapste runde had neaderesetted en med 14 sekunden vöärsprung up synen Mercedes-teammåt Bottas wön. Med syne vyvde oaverwinning in den britsken Grand Prix kwam hy gelyk med de rekords van Alain Prost en Jim Clark, dy allebeide ok vyv mål disse race hadden ewönnen. Dårenteagen had synen rivål in et kampioonskap Sebastian Vettel laste van et fålen van syne banden med twey ründen too gån en endigeden dårnå seavendes. Dårdöär nam synen vöärsprung up Hamilton in de individuelen tüskenstand av töt eyn pünt.
 
-De völgende weak endigeden Hamilton veerdes in Hungarye, achter Bottas. Dit leideden töt wat kontroversy ümdat Bottas eyrstens vöär Hamilton lag, mår, ümdat Vettel skade an syn stüre had en Räikkönen synen teammåt neet kön inhålen, vörmeden sich nen ry wågen achter de Ferraris. Terwyl Bottas Räikkönen neet kön inhålen, vrågeden Hamilton üm syne plåtse too wisselen med Bottas üm beyde Ferraris in proberen too hålen. Ümdat hem dat neet lükkeden, gav Hamilton de positsy terügge an Bottas by de låtste buchte van de låtste runde. Vettel wön de race en breideden synen vöärsprung in et individuelen kampioonskap up Hamilton uut töt 14 pünten en den vöärsprung van Mercedes in et kampioonskap vöär konstrukteur wayr terügebracht töt 39 pünten up Ferrari.
+De völgende weak endigeden Hamilton veerdes in Hungarye, achter Bottas. Dit leideden töt wat kontroversy ümdat Bottas eyrstens vöär Hamilton lag, mår, ümdat Vettel skade an syn stüre had en Räikkönen synen teammåt neet kön inhålen, vörmeden sich nen ry wågen achter de Ferraris. Terwyl Bottas Räikkönen neet kön inhålen, vrågeden Hamilton üm syne plåtse too wisselen med Bottas üm beyde Ferraris in proberen too hålen. Ümdat hem dat neet lükkeden, gav Hamilton de positsy terügge an Bottas by de låtste buchte van de låtste runde. Vettel wön de race en breideden synen vöärsprung in et individuelen kampioonskap up Hamilton uut töt 14 pünten en den vöärsprung van Mercedes in et kampioonskap vöär konstrukteur wyr terügebracht töt 39 pünten up Ferrari.
 
 Hamilton regained the lead of the championship after a hat-trick of victories after the summer break. During the qualifying of the Belgian Grand Prix, Hamilton scored his 68th career pole position, setting the fastest lap ever at the Circuit de Spa-Francorchamps (1:42.553) while championship rival, Vettel, qualified alongside him on the front row of the grid.<ref name="2017 Belgian Grand Prix Qualifying">{{cite web|title=Qualifying – Hamilton equals Schumacher's all-time pole record|url=https://www.formula1.com/en/latest/headlines/2017/8/qualifying---hamilton-equals-schumachers-all-time-pole-record.html|work=Formula1.com|publisher=[[Formula One Group|Formula One Administration]]|date=26 August 2017|accessdate=26 August 2017}}</ref> At his 200th Formula One race, Hamilton claimed his fifth win of the season in a close battle with Vettel who managed to keep in touch with Hamilton throughout the entire race, but could not find a way past.<ref name="2017 Belgian Grand Prix Race">{{cite web|title=2017 Belgian Grand Prix Race|url=https://www.formula1.com/en/latest/headlines/2017/8/race---race-hamilton-holds-off-vettel-to-halve-title-deficit.html|work=Formula1.com|publisher=[[Formula One Group|Formula One Administration]]|date=27 August 2017|accessdate=5 September 2017}}</ref>
 
