--- a/Dättlikon.mw
+++ b/Dättlikon.mw
@@ -1,16 +1,9 @@
-{| border=1 align=right cellpadding=4 cellspacing=0 width=300 style="margin: 0 0 1em 1em; background: #f9f9f9; border: 1px #aaaaaa solid; border-collapse: collapse; font-size: 95%;"
-|+<big><big>'''Dättlikon'''</big></big>
-|-
-| style="background:#efefef;" align="center" colspan=2 |
-{| border="0" cellpadding="2" cellspacing="0"
-|-
-| align="center" width="140px" | [[Ofbeelding:Daettlikon-blazon.svg|125px]]
-| align="center" width="140px" | [[Ofbeelding:Karte Gemeinde Dättlikon 2007.png|right|125px]]
-|}
-|-
-| align=center colspan=2 | [[Ofbeelding:Daettlikon 153.jpg|300px]]
-|}
 '''Dättlikon''' is een gemeynde en een plaatse in et [[Zwitserlaand|switserske]] kanton [[Zürich (kanton)|Zürich]] en ligt in et distrikt [[Winterthur (district)|Winterthur]]. De gemeynde hevt sikkum 789 inwoaner (2018) up een uppervlakde van 2,87 km².
+
+<gallery>
+File:Daettlikon 153.jpg|Een stråte in Dättlikon
+File:Karte Gemeinde Dättlikon 2007.png|Dättlikon up de kaarte
+</gallery>
 
 == Uutgånde verwysings == 
 {{Commonscat|Dättlikon}}
