/* Et seisoon van 2018 */

--- a/Lewis_Hamilton.mw
+++ b/Lewis_Hamilton.mw
@@ -198,7 +198,7 @@ Tydens de kwalifikatsy vöär den brasiliaansken Grouten Prys, måkeden Hamilton
 Mercedes dominereden de kwalifikatsy vöär den Grouten Prys van Abu Dhabi wårby Hamilton vöär de tweyde race up nen ry sich achter Bottas kwalificereden nådat Hamilton weader nen foutjen tydens de låtste buchte van syne låtste poging had emåked. Et was de eyrste mål sinds den Grouten Prys van Azerbeidjan dat et team de eyrste startry besetteden. Mercedes sloot et seisoon av med den veerden 1=2 terwyl Bottas vanav de eyrste startpositsy wön en Hamilton neet kön passeren ündanks meyrdere pogingen in de låtste ründen.
 
 ==== Et seisoon van 2018 ====
-Hamilton begön et seisoon med ne rekordbreakende seavende mål up de eyrste startpositsy in den australisken Grand Prix mår endigeden uutendelik tweyds axhter Sebastian Vettel, den nen vrog moment achter den virtuelen safety car —veröärsåked döär den verneelden Haas van Romain Grosjean— ebrükeden üm Hamilton too passeren en de positsy vaste too jolden töt an den finish.
+Hamilton begön et seisoon med ne rekordbreakende seavende mål up de eyrste startpositsy in den australisken Grand Prix mår endigeden uutendelik tweyds axhter Sebastian Vettel, den nen vrog moment achter den virtuelen safety car —veröärsåked döär den verneelden Haas van Romain Grosjean— ebrükeden üm Hamilton too passeren en de positsy vaste too holden töt an den finish.
 
 In de weak vöär den düütsken Grand Prix teakeneden Hamilton nen tweyjöärig kontrakt med Mercedes, dat töt £40 miljoon (per jår) weerd skynt too weasen, wat Hamilton den bestbetåleden koureur in de geskydenis van de Formule Eyn måked.
 
