--- a/Doarlseveld.mw
+++ b/Doarlseveld.mw
@@ -1,6 +1,6 @@
 [[Ofbeelding:Map - NL - Hellendoorn - Wijk 09 Daarlerveen - Buurt 00 Dorp Daarlerveen.svg|200px|right|thumb|Doarseveld in de gemeente Healdern]]
 
-'''Doarseveld''' (in t [[Nederlaands|Hollaands]]: ''Daarlerveen'') is n doarp in de gemeente [[Healdern]]. t Ligt an t kanaal [[Almelo - De Haandrik]], op t zuden van [[Vroomshoop]]. t hef kort an de 1200 inwonners.
+'''Doarlseveld''' (in t [[Nederlaands|Hollaands]]: ''Daarlerveen'') is n doarp in de gemeente [[Healdern]]. t Ligt an t kanaal [[Almelo - De Haandrik]], op t zuden van [[Vroomshoop]]. t hef kort an de 1200 inwonners.
 
 Sommigen meent ut uut te mut'nn schrief'nn as Doarlseveld, dit steet op de fraaie plaatnaam bord'n bij de ingang van 't doarp en in de kop van dit stukkie. Mar zo ai  kunt ziee steet er verder overal correct Doarseveld, aans kuj 't ok nie uut sprek'nn.
 
