--- a/Tweante.mw
+++ b/Tweante.mw
@@ -78,7 +78,7 @@ Vanof et viefde joarhoonderd kömmen de [[Saksen (vôlk)|Sassen]] vanoet et hudi
 
 [[Ofbeelding:Oldenzaalplechelmus1.jpg|thumb|left|250px|[[Oldenzaal]], [[Sint-Plechelmusbasiliek]]. Tiedens de Middeleewn was dit healigdom um de relieken van [[Plechelmus]] n beevoartsplek]]
 
-An et eande van et achtste joarhoonderd, noa ne lange riegel [[Saksenoorloogn|Sassenoorlogen]], köm Tweante oonder et [[Frankiese Riek]] van [[Koarel n Grootn|Koarel den Groten]]. Hee kreeg der et strabaante Sassenvolk oonder duur leagerplekken te stichten, zo as bie [[Oldnzel|Oldenzel]]. Det keump van et Fraankiese woard ''Olde Sala'', wat ''oolde zale ''betekent. Deftige leu harren vroger ne grote zale um rechtdag, vergoaringe en feeste te hoolden. Tweante hung nog aait de oolde Germaanse goden an. Mear oonder et Fraankiese beweend voorden Koarel den Groten met geweeld et [[Kristendom]] in. Et was óf bekearn óf vermoord worden. Det gung nog neet zoonder slag of stoot, want bievuurbeeld in [[Deaventer]] wörden vanoet Tweante vake de kaarken platbraandt, zo as den van den [[Angelsassies]]en monnik [[lebuïnus|Leefwin]]. Pas doo as Sassiese leaiders zo as [[Widukind|Wittekeend]] zik deupen leuten, volgden öare anhangers. De oolde [[germanen|germaanse]] heailigdommen wörden ummebouwd töt kaarken en kapellen. Den Sassiesen oadel gung zik duur et nieje Fraankiese leenrecht gedreagen as [[Feodalisme|feodale]] klasse.
+An et eande van et achtste joarhoonderd, noa ne lange riegel [[Saksenoorloogn|Sassenoorlogen]], köm Tweante oonder et [[Frankiese Riek]] van [[Koarel n Grootn|Koarel den Groten]]. Hee kreeg der et strabaante Sassenvolk oonder duur leagerplekken te stichten, zo as bie [[Oldnzel|Oldenzel]]. Det keump van et Fraankiese woard ''Olde Sala'', wat ''oolde zale ''betekent. Deftige leu harren vroger ne grote zale um rechtdag, vergoaringe en feeste te hoolden. Tweante hung nog aait de oolde Germaanse goden an. Mear oonder et Fraankiese beweend voorden Koarel den Groten met geweeld et [[Kristendom]] in. Et was óf bekearn óf vermoord worden. Det gung nog neet zoonder slag of stoot, want bievuurbeeld in [[Deaventer]] wörden vanoet Tweante vake de kaarken platbraandt, zo as den van den [[Angelsassen|Angelsassies]]en monnik [[lebuïnus|Leefwin]]. Pas doo as Sassiese leaiders zo as [[Widukind|Wittekeend]] zik deupen leuten, volgden öare anhangers. De oolde [[germanen|germaanse]] heailigdommen wörden ummebouwd töt kaarken en kapellen. Den Sassiesen oadel gung zik duur et nieje Fraankiese leenrecht gedreagen as [[Feodalisme|feodale]] klasse.
  
 Zo ongevear in et 10de joarhoonderd köm Tweante oonder besteur van et [[Sticht Utrecht]] en wör et deel van et [[Oaversticht]]. Gedoerende de middeleeuwen besteurden eerst nen groaf -  nen hogen hear oonder den bisskop - de strekke vanoet zinnen borg in [[Goor]]. Later köm et besteur in haande van nen [[laanddrost]], den as duur nen bisskop ekeuzen wör. In et 11de of 12e joarhoonderd wör Noord-Tweante (um [[Emmelkaamp]]) van Tweante ofskeaiden en gung bie de [[Graofschop Benthem|Groafskop Beantem]] heuren Et bleef nog wal oonder Utrechts besteur.
 
