*Empty MediaWiki Message*

--- a/Henk_Scholte.mw
+++ b/Henk_Scholte.mw
@@ -1,6 +1,6 @@
 '''Henk Scholte''' ([[Emmen]], [[26 juli]] [[1959]]) is nen [[grunnegs|grönniger]] sänger, skryver en presentator. Dårnöäst is hee rådsman by et Huus van de Grönninger Kultuur.
 
-Al is Scholte geboren in et [[Drenthe|drentske]] Emmen, et gröätste deyl van syne jöägend bracht hee döär in et [[Grönningen|grönningske]] [[Stadskanaal]]. In [[1976]] güng hee by de grönningske folk-grup [[Törf]]. In [[1997]] wün Scholte med disse grup de K. ter Laanprys van [[Stichting 't Grunneger Bouk]].
+Al is Scholte geboren in et [[Drenthe|drentske]] Emmen, et gröätste deyl van syne jöägend bracht hee döär in et [[Grönningen|grönningske]] [[Stadskanaal]]. In [[1976]] güng hee by de grönningske folk-grup [[Törf (band)|Törf]]. In [[1997]] wün Scholte med disse grup de K. ter Laanprys van [[Stichting 't Grunneger Bouk]].
 
 Döär syn wark as leedtekstenskryver en syne breyde interesse vöär de grönninger kultuur en dialektskryverye rakeden Scholte in [[1981]] betrökken by de uprichting van et grünneger tydskrivt [[Krödde (tiedschrift)|Krödde]], wårby hee töt [[1995]] in de redakty sat. In [[1991]] köäm syne dichtbündel ''Vervrömd'' uut, wårin as grönningske gedichten stünden med oaversettingen in et oustfreesk döär Carl Heinz Dirks.
 
