/* Et seisoon van 2018: Vyvde werldtitel */

--- a/Lewis_Hamilton.mw
+++ b/Lewis_Hamilton.mw
@@ -202,11 +202,11 @@ Dit Formule Eynseisoon (2018) was de eyrste mål dat twey veervowdige werldkampi
 
 In den fransken Grand Prix wön Hamilton van de eyrste startpositsy terwyl den leider in et kampioonskap Vettel ne botsing in buchte eyn veröärsåkeden, wat hem terügsloog når de achterkante van et veld van wåruut hy uutendelik vyvdes endigeden, wårdöär Hamilton de leiding in et kampioonskap med 14 pünten terügge kön pakken. In Oustenryk mos Hamilton vöär et eyrst sinds den maleysisken Grouten Prys van 2016 vanweagen nen technisk probleym upgeaven, wårdöär nen (rekord)reeks van 33 races, wårin hy altyd in de pünten was eendiged, sünder upgåve töt ne ende kwam. Döärdat Vettel dardes was eendiged, kwam hy weader an de leiding van et kampioonskap. Ündanks dat hy up de eyrste startpositsy an Silverstone was begönnen, behåleden Hamilton gin thuusoaverwinning nådat hy nå ne botsing med Räikkönen in de eyrste runde virtueel låtstes reed. Ündanks dat herstelleden Hamilton sich üm tweyds too endigen terwyl Vettel de oaverwinning behåleden. In de weak vöär den düütsken Grand Prix teakeneden Hamilton nen tweyjöärig kontrakt med Mercedes, dat töt £40 miljoon (per jår) weerd skynt too weasen, wat Hamilton den bestbetåleden koureur in de geskydenis van de Formule Eyn måked. Nen hydraulisk probleym in de kwalifikatsy beteakeneden dat Hamilton de race slechts as veertynden sül starten. In de race pakkeden Hamilton eyne van de beste oaverwinningen van syne karriere terwyl hy döär et middendeyl van et veld reed en döär de veranderende weersümstandigheyden hen kwam, eholpen döär weader nen fout van Vettel den in de hekken botseden vanav de leidende positsy in syne thuusrace. De leiding in et kampioonskap wyr weader van Hamilton ewörden. Hamilton pakkeden weader upeynvölgende oaverwinningen en syne vyvde oaverwinning van et seisoon terwyl hy van de eyrste startpositsy in Hungarye wön, wårmed hy synen vöärsprung in et kampioonskap når 24 pünten uutbreideden an et begin van den sommerstop.
 
-[[File:FIA_F1_Austria_2018_Nr._44_Hamilton.jpg|thumb|right|Hamilton suffered his only retirement of the season at the [[2018 Austrian Grand Prix|Austrian Grand Prix]].]]
+[[File:FIA_F1_Austria_2018_Nr._44_Hamilton.jpg|thumb|right|Hamilton mos eyne mål in et seisoon upgeaven in den oustenryksken Grouten Prys.]]
 
 Nå den sommerstop had Hamilton weader fantastisken vörm; hy wön veer van de völgende vyv races med ok veer upeynvölgende Grand Prixoaverwinningen. Et seisoon begön weader in Belgie wår Hamilton vöär de sesde mål van et seisoon de eyrste startpositsy behåleden. Skonwal behåleden den Ferrari van Vettel de oaverwinning up et völ kracht eisenden cirkuit van Spa nådat hy Hamilton inhåleden in de eyrste runde. Hamilton profitereden vulledig van weader nen fout van titelrivål Vettel, den runddråieden in de eyrste runde terwyl Hamilton hem an de buutenkant inhåleden en behåleden de oaverwinning up Monza vöär de ougen van de Tifosi nådat hy Räikkönen, den eyrstes lag, med acht ründen too gån inhåleden. In den singaporeesken Grouten Prys, ne båne wår Mercedes moite med presteren had ehad in et hybridetydperk, behåleden Hamilton ne unverwachte eyrste startpositsy med eyne van syne beste ründen van syne karriere. Hamilton sei sölv dat de runde "magisk vuleden", terwyl teambås Toto Wolff et beskrev as "fonkelend", deran toovoogend dat "alleynig hy sül weaten wat hy deed in dee runde... et is unwarkelik". Hamilton setteden syne eyrste startpositsy in de race in ne oaverwinning üm en breideden dårmed synen vöärsprung in et kampioonskap up Vettel, den dardes endigeden achter den Red Bull van Verstappen, uut.
 
-Hamilton behåleden ne kontroversiele oaverwinning in Rüsland wår Mercedes, nådat hy in de pitstops up achterstand van Vettel was ekommen vöärdat hy hem passereden up de båne, teammåt Bottas updroog Hamilton de leiding in de race too geaven üm synen vöärsprung in et kampioonskap up Vettel wyder uut too breiden. Nå de race beskrev Hamilton synen teammåt as "nen echten heer". Ne commanding oaverwinning vanav de eyrste startpositsy in Japan, terwyl Vettel sesdes endigeden nå runddråien in de race, evölged döär nen podiumfinish in de Vereynigde Ståten betekeaneden dat Hamilton de titel vöär et tweyden jår up nen ry kön pakken in den meksikaansken Grouten Prys. Hamilton endigeden veerdes in Meksiko en behåleden so de werldtitel med noch twey races too gån. Den upny werldkampioon ewördenen koureur endigeden syn seisoon in geweldigen vörm med upeynvölgende oaverwinningen in de Groute Prys van Brasilie en Abu Dhabi wårmed hy nen ny rekord van meyste kampioonskapspünten in eyn seisoon behåled neadersetteden (408). Hy wyr ok den eyrsten koureur den et totålen antal van 3000 pünten in ne karriere oaverskreed. Hamilton beendigeden et seisoon med 11 eyrste startpositsys, 11 raceoaverwinningen en ne evenåring van et rekord van 17 podiumfinishes.
+Hamilton behåleden ne kontroversiele oaverwinning in Rüsland wår Mercedes, nådat hy in de pitstops up achterstand van Vettel was ekommen vöärdat hy hem passereden up de båne, teammåt Bottas updroog Hamilton de leiding in de race too geaven üm synen vöärsprung in et kampioonskap up Vettel wyder uut too breiden. Nå de race beskrev Hamilton synen teammåt as "nen echten heer". Ne indrükwekkende oaverwinning vanav de eyrste startpositsy in Japan, terwyl Vettel sesdes endigeden nå runddråien in de race, evölged döär nen podiumfinish in de Vereynigde Ståten betekeaneden dat Hamilton de titel vöär et tweyden jår up nen ry kön pakken in den meksikaansken Grouten Prys. Hamilton endigeden veerdes in Meksiko en behåleden so de werldtitel med noch twey races too gån. Den upny werldkampioon ewördenen koureur endigeden syn seisoon in geweldigen vörm med upeynvölgende oaverwinningen in de Groute Prys van Brasilie en Abu Dhabi wårmed hy nen ny rekord van meyste kampioonskapspünten in eyn seisoon behåled neadersetteden (408). Hy wyr ok den eyrsten koureur den et totålen antal van 3000 pünten in ne karriere oaverskreed. Hamilton beendigeden et seisoon med 11 eyrste startpositsys, 11 raceoaverwinningen en ne evenåring van et rekord van 17 podiumfinishes.
 
 ====Et seisoon van 2019====
 Nådat hy nen kontrakt had eteakened med Mercedes dat töt 2020 sül düren, wyr et bevestiged dat Hamilton syne titel in 2019 sül verdeadigen. Nå den Grouten Prys van Singapore  stünd Hamilton an de leiding van et werldkampioonskap med nen vöärsprung van 65 pünten.
