*Empty MediaWiki Message*

--- a/Walpurgisnacht.mw
+++ b/Walpurgisnacht.mw
@@ -1,7 +1,7 @@
-[[Bestaand:Valborgsbrasa-1.jpg|thumb|330px|Vröygdevüür in Sweden. Et untsteaken van vröygdevüren is eyn van de vöäle traditys dee samenhangen mid walpurgisnacht]]
-'''Walpurgisnacht''' is een [[Europa|europääsk]] feest, wat vandage an den dag eholden wördt, mar noch kümt uut vöärchristelike tyden. Et wördt eholden up de nacht van [[30 april]] når [[1 mei|1 mei]]. Et feest is enöömd når de heilige [[Walburga]]. Walpurgisnacht hevt beteykenisse vöär [[heidendom|heidenen]] en [[wikka]]s. In de olde volksverhalen wördt an disse nacht hekserye to-eweasen. De heksen sollen by mekare kummen ümme de düvel to anbidden, en bouse geysten sollen vry spel hebben. Volgens de volksverhalen is de skeidingslyne tüsken heamel en aerde up disse nacht mar kört. Vyringen rund walpurgisnacht kumt vöär in [[Düütskland]], [[Estland]], [[Sveden|Sweden]] en [[Finland]].
+[[Bestaand:Valborgsbrasa-1.jpg|thumb|330px|Vröygdevüür in Sweden. Et untstekken van vröygdevüren is eyne van de vöäle traditys dee samenhanget med walpurgisnacht]]
+'''Walpurgisnacht''' is een [[Europa|europääsk]] feest, wat vandage an den dag eholden wördt, mar noch kümt üüt vöärchristelike tyden. Et wördt eholden up de nacht van [[30 april]] når [[1 mei|1 mei]]. Et feest is enöömd når de heilige [[Walburga]]. Walpurgisnacht hevt betekkenisse vöär [[heidendom|heidenen]] en [[wikka]]-lude. In de olde volksverhalen wördt an disse nacht hekserye to-eweasen. De heksen sollen by mekare kummen ümme de düvel to anbidden, en bouse geysten sollen vry spel hebben. Volgens de volksverhalen is de skeidingslyne tüsken heamel en aerde up disse nacht mar dünne. Vyrings rund walpurgisnacht kummet in vöär in [[Düütskland]], [[Estland]], [[Sveden|Sweden]] en [[Finland]].
 
-Mid walpurgisnacht wördden de lätste düüstere krachten üüt et [[winter]] vordejagd en de vrüchtbårheid wördt dan evyrd en to-ejöächen. Walpurgisnacht is vöäral döär [[Johann Wolfgang von Goethe|Goethes]] ''[[Faust (Goethe)|Faust II]]'' (1832) stark [[mythologie|emythologiseerd]]. Vanweagen disse üüteynloupende traditys hevt et feest ouk verskillende beteykenissen en funktys. 
+Med walpurgisnacht wördet de lätste düüstere krachten üüt et [[winter]] vord ejaagd en de vrüchtbaarheid wördt dan evyrd en to-ejöächen. Walpurgisnacht is vöäral döär [[Johann Wolfgang von Goethe|Goethes]] ''[[Faust (Goethe)|Faust II]]'' (1832) stark [[mythologie|emytologiseyred]]. Vanweage disse üüteynloupende traditys hevt et feest ouk verskillende betekkenissen en funktys. 
 
 Et feest wördt manks ouk wel ''vanadisnacht'' enöömd.
 
