--- a/Juul.mw
+++ b/Juul.mw
@@ -32,7 +32,7 @@ In olde tyden wördden up de körtsten dag een [[Boake|grout ritueel vüür]] es
 In disse kolde dage kummet lüde by mekare ümme mekare geselskap te holden. Eigenlik is disse tyd ouk een vakanty. See bint an ewarked med et binnenhalen van de ougst, alles steyt klår vöär de kummende tyd. Düs nömen see der mar van: lekker eaten en supen gån. Teagenwoordig hevt et karstfeest dan ouk de beteakenisse ekreagen van by mekare kummen en lekker eaten. Nå mekare ümmekyken in disse tyd is noch belangryker as anders. In de germaanske oldheid had y groute suupfeesten. Der wördden twaalv nachte lange alleyne mar edansd, esöäpen en evryen by groute vüren. See offerden eaverswynen an den god Freyr, ümme et vervolgens up te eaten.
 
 ==Symbolik==
-Et burenvolk had van vöärend al syn ougst binnen-ehaald, et vleisk in esolted en de deakentys ebreid. See mosten de winter mar döär seen te kummen. Ümdat et kold en nat is buten, was et logisk dat see binnen et was geselliger makeden, med lichtys en dennetakken. De readen dårvöär is dat dennetakken et heyle jår döär gröön blyvet, en dat düt in de kolde dage u der an höägen dat et ooit wear gröön buten wördt. Et licht düt u höägen når de warmde van de sünne in et [[sumer|summer]]. Tydens disse twaalv dage wördden der dan ouk vöäl groute vüren an-estöäken, en de heyle tyd verdan an-eholden. Want solange as den sünne neet skent, dan mütte wy et sülv mar doon. Nu noch wördt der in de noordske landen ''juulblokken'' ehakked en de heyle karsttyd up-estoaked. In de westerske landen heb y noch altyd vöäle midwintervüren. In latere tyden güngen lüde dennenboumen in et huus halen. Ümdat dissend altyd gröön bint en düt denken an den [[Yggdrasil|leavensboum]]. Dissend wördt noch altyd in et huus etrökken en med eklöörde ballen en lichtys versyrd. Vandage an den dag nömen wy dat een [[karstboum]].
+Et burenvolk had van vöärend al syn ougst binnen-ehaald, et vleisk in esolted en de deakentys ebreid. See mosten de winter mar döär seen te kummen. Ümdat et kold en nat is büten, was et logisk dat sy binnen et was geselliger makeden, med lichtys en dennetakken. De readen dårvöär is dat dennetakken et heyle jår döär gröön blyvet, en dat düt in de kolde dage u der an höägen dat et ooit wear gröön büten wördt. Et licht düt u höägen når de warmde van de sünne in et [[sumer|summer]]. Tydens disse twaalv dage wördden der dan ouk vöäl groute vüren an-estöäken, en de heyle tyd verdan an-eholden. Want solange as den sünne neet skent, dan müttet wy et sülv mar doon. Nu noch wördt der in de noordske landen ''juulblokken'' ehakked en de heyle karsttyd up-estoaked. In de westerske landen heb y noch altyd vöäle midwintervüren. In latere tyden güngen lüde dennenboumen in et hüüs halen. Ümdat dissend altyd gröön bint en düt denken an den [[Yggdrasil|leavensboum]]. Dissend wördt noch altyd in et hüüs etrökken en med eklöörde ballen en lichtys versyrd. Vandage an den dag nömet wy dat een [[karstboum]].
 
 ==Vergelykings med andere traditys==
 Vöäle van disse dachtenissen, gebruken en symbolen bint up vöäle steades up de wearld te vinden. En in et juulfeest heb y ouk verskillende traditys by mekare, so as wårskynlik elk feest en tradity uutendelik een mengelmoos is van verskillende dinge. As y byvöärbeeld kyket når de kearls dee as elk midwinter med derenhüden en hoorns up den kop rundswarvet; dår bint al grotskilderings van bekend, dee stammet uut wat düsenden jåren eleaden. Vandage an den dag geböärt et noch, kyk mar når de [[Krampus|krampussen]] in de Alpen (Ousterryk) en de Swarte Peten in Neaderland. De grykske god Pan was een god den oaver de wilde deren heyrsten, en sag deruut as een halv menske, halv bok. So ouk de keltisken god Cernunnos, god van et wold, wilde deren en vrüchtbårheid by kearls. Hee had een hartengewei up den kop.
