--- a/Juul.mw
+++ b/Juul.mw
@@ -40,7 +40,7 @@ Vöäle van disse dachtenissen, gebruken en symbolen bint up vöäle steades up 
 Groute vüren ansteaken dat geböärt sowal in de winter as in et vöärjår, oaver heyl Europa. 
 
 ===Karst===
-Karst is noch wal et beste vöärbeald van verskillende traditys dee as eyne feest wördden. Ümdat et midwinterfeest so slim in de west- en noordeuropeanen sat, kun de karke dissen neet ofskaffen. Wat se döäden was kyken når gelykende ideen tüsken de heidenen en de christenen. Jesus is jår et licht wat in de düüsternisse kwamt, so as unse vöärolders de sünne wearümme in de düüsternisse hebben wolden. De unwyse jungevolk, dee verkleyded güngen as krygers en douden, wördden döär den heiligen Sint-Nikolås etemd. En verwördden töt düvelske weasens dee döär ekettend bint. Et hoornblåsen döäd y nu ümme et Christuskind te verwelkummen. Sülvs de karstboum wörd een verwysing når de Dree-eynheid, döär syn dreehokige form.
+Karst is noch wal et beste vöärbeald van verskillende traditys dee as eyne feest wördden. Ümdat et midwinterfeest so slim in de west- en noordeuropeanen sat, kun de karke dissen neet ofskavven. Wat sy döäden was kyken når gelykende ideeën tüsken de heidenen en de christenen. Jesus is jå et licht wat in de düüsternisse kwamt, so as unse vöärolders de sünne wearümme in de düüsternisse hebben wolden. De unwyse jungevolk, dee verkleyded güngen as deren en douden, wördden döär den heiligen Sint-Nikolås etemmed. En verwördden töt düvelske weasens dee döär hüm ekettend bint. Et hoarnblåsen döäd y nu ümme et Christuskind te verwelkummen. Sülvs de karstboum wördden een verwysing når (de christelike leyre van) de Dree-eynheid, döär syn dreehokige förm.
 
 ==Germaanske kearlsbunden==
 De germanen hadden in ear gemeynskappen ouk kearlsbunden. Dissen bestünden uut junge kearltys dee as up vroge leavtyd dervöär eköäsen hebbet ümme ear leaven deran te wyden. So een grup was ewyded an den krygers- en doudsgod [[Wodan]] (noordsk: ''Odin''). Mar Wodan was sowal den god van de krygers as van de wysheid, dichterye en de drunkenskap. (Vergelyk [[Dionysus]]). As so een grup in trance wolden kummen, dan söäpen se machtig vöäle beer of namen bepålde krüden en paddestolen. En künden see as van unwys tekeyr gån in de stryd. ''Tekeyr gån as een beyst''; dat is wal een gode bedüding dårvöär, want disse lüde kleydden sich vake in hüden van bearen en eaverswynen. Se stelden sich dan ouk vöär dat see dat beyst echt waren. So as de wyking[[beserkers]]. Disse kearlsbunden waren elitekrygers. Mar ouk mosten see samenwarken med sjamamen vöär rituelen.
