--- a/Republik_Artsach.mw
+++ b/Republik_Artsach.mw
@@ -1,4 +1,4 @@
-De '''Republik Artsach''' ([[armeensk]]: Արցախի Հանրապետություն, Artsakhi Hanrapetût'jûn), tüsken 1991 en 2017 de '''Republik Nagorno-Karabach''' (armeensk: Լեռնային Ղարաբաղի Հանրապետություն, Lernajin Gharabaghi Hanrapetût'jûn), is een feitelik unafhangelike republik in de südelike Kaukasus van [[Eurasie]]. De republik is üüteröpen nå de positive üütslag van een referendum oaver de unafhangelikheid van et gebeed en wördt (noch) neet erkend döär de internationale gemeynskap, formeel behöyrt et gebeed tot [[Azerbeidzjan|Azerbaidjan]]. Artsach hevt kontrole oaver et groutste gedeylde van et vöärmålige oblast Nagorno-Karabach. De höyvdstad is Stepanakert. Artsach grenst an [[Armenië|Armenie]] in et westen, [[Iran]] in et süden en [[Azerbeidzjan|Azerbaidjan]] in et noorden en ousten.
+De '''Republik Artsach''' ([[armeensk]]: Արցախի Հանրապետություն, Artsakhi Hanrapetût'jûn), tüsken 1991 en 2017 de '''Republik Nagorno-Karabach''' (armeensk: Լեռնային Ղարաբաղի Հանրապետություն, Lernajin Gharabaghi Hanrapetût'jûn), is een feitelik unafhangelike republik in de südelike Kaukasus van [[Eurasie]]. De republik is üüteröpen nå de positive üütslag van een referendum oaver de unafhangelikheid van et gebeed en wördt (noch) neet erkend döär de internationale gemeynskap, formeel behöyrt et gebeed tot [[Azerbeidzjan|Azerbaidjan]]. Artsach hevt kontrole oaver et groutste gedeylde van et vöärmålige oblast Nagorno-Karabach. De höyvdstad is [[Stepanakert]]. Artsach grenst an [[Armenië|Armenie]] in et westen, [[Iran]] in et süden en [[Azerbeidzjan|Azerbaidjan]] in et noorden en ousten.
 
 == Historiske en politike achtergrund ==
 [[Bestaand:Armenian_boroughs_of_city_of_Shusha_destroyed_by_Azerbaijani_armed_forces_in_1920_with_defiled_cathedral_of_Holy_Savior_on_background.jpg|links|duum|250x250px|<center>''De in 1920 döär azerbaidjaanske strydkrachten vernetigde armeenske stadsdeylen van Sjusja mid de plünderde Verlosserkatedraal up de achtergrund''</center>]]
@@ -7,7 +7,7 @@ De '''Republik Artsach''' ([[armeensk]]: Արցախի Հանրապետությո
 [[Bestaand:Ghazanchetsots_Cathedral_01.jpg|links|duum|250x250px|<center>''Christus de Verlosserkatedraal van Sjusja''</center>]]
 De republik hevt kontrole oaver et groutste gedeylde van et vöärmålige autonome oblast Nagorno-Karabach en in tal van azerbaidjaanske distrikten, dee tüsken Armenie, Iran en Artsach liggen.
 
-De bewuners binnen vöärnamelik etniske armeenske christenen. De streak was al in 1918 een strydkwesty tüsken Armenie en Azerbaidjan, dee to krekt unafhangelik ewörden waren van [[Ruslaand|Rusland]]. Nådat de [[Sovjet-Unie|Sovjet-Uny]] et gebeed weader under kontrole kreyg, wördde in 1923 et autonome oblast Nagorno-Karabach estichted, dat bestüürlik by de Azerbaidjaanske Socialistiske Sovjetrepublik indeyld wördde.
+De bewuners binnen vöärnamelik etniske armeenske christenen. De streak was al in 1918 een strydkwesty tüsken Armenie en Azerbaidjan, dee to krekt unafhangelik ewörden waren van [[Ruslaand|Rusland]]. Nådat de [[Sovjet-Unie|Sovjet-Uny]] et gebeed weader under kontrole kreyg, wördde in 1923 et autonome oblast Nagorno-Karabach estichted, dat bestüürlik by de Azerbaidjaanske Socialistiske Sovjetrepublik inedeyld wördde.
 
 Mid et üüteynevallen van de Sovjet-Uny laide et konflikt oaver et gebeed weader up tüsken de armeniers en azerbaidjanen. Et was et begin van de Nagorno-Karabach-oorlog, dee van 1991 tot 1994 düürde en so'n 30.000 slachtoffers eisde.
 
@@ -17,7 +17,7 @@ Sinds de wåpenstilstand van 1994 steyt et groutste gedeylde van Artsach en tal 
 
 Artsach underholdt nauwe ekonomiske en politike relatys mid Armenie. Wetten dee döär et armeenske parlement in Jerevan afekondigd binnen, wörden in de regel ouk döär Artsach oaverenöämen. De armeenske dram is ouk et wettelike betaalmiddel van Artsach. 
 
-In april 2016 laide de stryd nå azerbaidjaanske bombardementen up et land upny up. Volgens de armeenske president Sarksjan waren et de swårste gejochten sinds de wåpenstilstand van 1994. De Vereynigde Natys, Rusland, de Vereynigde Ståten van Amerika en de Europeeske Uny ropen de partyen up een ende te maken an et geweld dat upvolgd wördde döär Azerbaidjan mid een eynsydige wåpenstilstand.
+In april 2016 laide de stryd nå azerbaidjaanske bombardementen up et land upny up. Volgens de armeenske president Sarksjan waren et de swårste gevechten sinds de wåpenstilstand van 1994. De Vereynigde Natys, Rusland, de [[Verienigde Staoten van Amerike|Vereynigde Ståten van Amerika]] en de [[Europese Unie|Europeeske Uny]] ropen de partyen up een ende te maken an et geweld dat upevolgd wördde döär Azerbaidjan mid een eynsydige wåpenstilstand.
 
 == Geografy en klimaat ==
 [[Bestaand:Вагуас2.jpg|duum|260x260px|<center>''Murovdag''</center>]]
@@ -32,3 +32,9 @@ Meyr as een darde van et land besteyt üüt [[Bos|busk]] en et hevt meyr as 2.00
 De Sarsang-waterkrachtcentrale mid een kapaciteit van 50 MW is de belangrykste energybron van de republik. Jårliks wördden der tüsken de 90 en 100 miljoon kilowattüren upewekked. 
 
 Döärdat de lokale watervöärråd voldoonde is, künnen der kleine waterkrachtcentrales in alle regios van de republik ebouwd wörden. Der löpt een programma vöär de bouw van achttyn kleinere waterkrachtcentrales. So gauw as se vultoid binnen kan et land elektriciteit nå et bütenland eksporteren.
+
+{{Dialekt|wvel||Nysassiske Skryvwyse}}
+	
+[[Kategorie:Laand]]
+[[Kategorie:Europa]]
+[[Kategorie:Azië]]
