*Empty MediaWiki Message*

--- a/Republik_Artsach.mw
+++ b/Republik_Artsach.mw
@@ -1,3 +1,26 @@
+{{Laandtabel-vel
+| naaminlaanstaal      = Artsakhi Hanrapetut’yun<br />Արցախի Հանրապետություն
+| vlagge               = Flag of Nagorno-Karabakh.svg
+| wapen                = Coat of arms of Artsakh.gif
+| lokasie              = Artsakh_Current_en.png
+| talen                = [[armeensk]]
+| heufdstad            = [[Stepanakert]]
+| religie              = [[Armeensk-Apostoliske Karke|armeens-apostolisk]]
+| regeringsvorm        = [[presidentiele republik]]
+| km2                  = 11.430<ref>{{en}} [http://stat-nkr.am/files/publications/LXH%20tverov_2012.pdf STAT-NKR, de Nationale Statistische Dienst van de Republiek Artsach (p. 6)]. Zie ook: [http://www.nkrusa.org/country_profile/constitution.shtml Grondwet van de RA, artikel 142]</ref>
+| waoter               =
+| inwoeners            = 150.932 (census 2015)
+| dichtheid            = 
+| lengtegroad          = 46/42//E
+| breedtegroad         = 39/48//N
+| munteenheid          = [[dram]]| valutacode = AMD
+| tiedzone             = +4
+| volkslied            = [[Vry en unafhangelik Artsach]]
+| feestdag             = [[2 september]] (onafhankelijkheidsdag)
+| tld                  = am
+| laandcode             = NKR
+| til                  = +374 47
+}}
 De '''Republik Artsach''' ([[armeensk]]: Արցախի Հանրապետություն, Artsakhi Hanrapetût'jûn), tüsken 1991 en 2017 de '''Republik Nagorno-Karabach''' (armeensk: Լեռնային Ղարաբաղի Հանրապետություն, Lernajin Gharabaghi Hanrapetût'jûn), is een feitelik unafhangelike republik in de südelike Kaukasus van [[Eurasie]]. De republik is üüteröpen nå de positive üütslag van een referendum oaver de unafhangelikheid van et gebeed en wördt (noch) neet erkend döär de internationale gemeynskap, formeel behöyrt et gebeed tot [[Azerbeidzjan|Azerbaidjan]]. Artsach hevt kontrole oaver et groutste gedeylde van et vöärmålige oblast Nagorno-Karabach. De höyvdstad is [[Stepanakert]]. Artsach grenst an [[Armenië|Armenie]] in et westen, [[Iran]] in et süden en [[Azerbeidzjan|Azerbaidjan]] in et noorden en ousten.
 
 == Historiske en politike achtergrund ==
