*Empty MediaWiki Message*

--- a/Republik_Artsach.mw
+++ b/Republik_Artsach.mw
@@ -7,7 +7,7 @@
 | heufdstad            = [[Stepanakert]]
 | religie              = [[Armeensk-Apostoliske Karke|armeens-apostolisk]]
 | regeringsvorm        = [[presidentiele republik]]
-| km2                  = 11.430<ref>{{en}} [http://stat-nkr.am/files/publications/LXH%20tverov_2012.pdf STAT-NKR, de Nationale Statistische Dienst van de Republiek Artsach (p. 6)]. Zie ook: [http://www.nkrusa.org/country_profile/constitution.shtml Grondwet van de RA, artikel 142]</ref>
+| km2                  = 11.430<ref>[http://stat-nkr.am/files/publications/LXH%20tverov_2012.pdf STAT-NKR, de Nationale Statistiske Deenst van de Republik Artsach (p. 6)]. See ouk: [http://www.nkrusa.org/country_profile/constitution.shtml Grundwet van de RA, artikel 142]</ref>
 | waoter               =
 | inwoeners            = 150.932 (census 2015)
 | dichtheid            = 
@@ -55,6 +55,9 @@ Meyr as een darde van et land besteyt üüt [[Bos|busk]] en et hevt meyr as 2.00
 De Sarsang-waterkrachtcentrale mid een kapaciteit van 50 MW is de belangrykste energybron van de republik. Jårliks wördden der tüsken de 90 en 100 miljoon kilowattüren upewekked. 
 
 Döärdat de lokale watervöärråd voldoonde is, künnen der kleine waterkrachtcentrales in alle regios van de republik ebouwd wörden. Der löpt een programma vöär de bouw van achttyn kleinere waterkrachtcentrales. So gauw as se vultoid binnen kan et land elektriciteit nå et bütenland eksporteren.
+
+== Referensys ==
+<references/>
 
 {{Dialekt|wvel||Nysassiske Skryvwyse}}
 	
