*Empty MediaWiki Message*

--- a/Nedersaksisch_W.mw
+++ b/Nedersaksisch_W.mw
@@ -37,6 +37,11 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit W begunt''' oet 't [[Neders
 **''wäter'' ([[Attem]])
 **''waoiter'' ([[Niekark]])
 
+==Welterusten==
+*[[Sallaans]]: 
+**'Trust'n'
+**'Sloapze'
+
 ==Weegschaal==
 *[[Nederlands]]: ''weegschaal''
 
