--- a/Nedersaksisch_W.mw
+++ b/Nedersaksisch_W.mw
@@ -39,6 +39,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit W begunt''' oet 't [[Neders
 
 ==Welterusten==
 *[[Sallaans]]: 
+**'Welt'rust'n'
 **'Trust'n'
 **'Sloapze'
 
