--- a/Nedersaksisch_W.mw
+++ b/Nedersaksisch_W.mw
@@ -94,7 +94,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit W begunt''' oet 't [[Neders
 **''weep'' 
 **''ielbai'' 
 **''iem'' (betaikent aaigelks t Nederlaandse ''bij'')
-*[[Sallaans]]: ...
+*[[Sallaans]]: 'wespe', 'waspe'
 *[[Stellingwarfs]]: ''wapse''
 *[[Tweants]]: ...
 *[[Urkers]]: ...
