--- a/Nedersaksisch_W.mw
+++ b/Nedersaksisch_W.mw
@@ -115,7 +115,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit W begunt''' oet 't [[Neders
 **''naanje''
 **''suuske'' 
 **''waig{{small()|e}}''
-*[[Sallaans]]: ...
+*[[Sallaans]]: 'wiege' (klemtoon op 'ie')
 *[[Stellingwarfs]]: ''wieg''
 *[[Tweants]]:
 **''weeg{{small()|e}}''
