--- a/Nedersaksisch_W.mw
+++ b/Nedersaksisch_W.mw
@@ -146,7 +146,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit W begunt''' oet 't [[Neders
 **''keuteldoemke'' ([[Veenkelonioals|VEK]])
 **''toenkroeper(ke)'' (overg)
 *[[Oostfreisk]]: ''toenkroeper'' (Platduutse skriefwies ''Tuunkruper'')
-*[[Sallaans]]: ...
+*[[Sallaans]]: ''Winterkeuninkie(n)''
 *[[Stellingwarfs]]:
 **'''''[[doempien]]'''''
 **''winterkeuninkien''
